src/cffi/classes/wxGrid_cpp.lisp


(cffi:defcfun ("wxGrid_HideCellEditControl" wxGrid_HideCellEditControl) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_SaveEditControlValue" wxGrid_SaveEditControlValue) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_XYToCell" wxGrid_XYToCell) :void
  (_obj :pointer)
  (x :int)
  (y :int)
  (r :pointer)
  (c :pointer))

(cffi:defcfun ("wxGrid_YToRow" wxGrid_YToRow) :int
  (_obj :pointer)
  (y :int))

(cffi:defcfun ("wxGrid_XToCol" wxGrid_XToCol) :int
  (_obj :pointer)
  (x :int))

(cffi:defcfun ("wxGrid_YToEdgeOfRow" wxGrid_YToEdgeOfRow) :int
  (_obj :pointer)
  (y :int))

(cffi:defcfun ("wxGrid_XToEdgeOfCol" wxGrid_XToEdgeOfCol) :int
  (_obj :pointer)
  (x :int))

(cffi:defcfun ("wxGrid_CellToRect" wxGrid_CellToRect) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (x :pointer)
  (y :pointer)
  (w :pointer)
  (h :pointer))

(cffi:defcfun ("wxGrid_GetGridCursorRow" wxGrid_GetGridCursorRow) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetGridCursorCol" wxGrid_GetGridCursorCol) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_IsVisible" wxGrid_IsVisible) :int
  (_obj :pointer)
  (row :int)
  (col :int)
  (wholeCellVisible :int))

(cffi:defcfun ("wxGrid_MakeCellVisible" wxGrid_MakeCellVisible) :void
  (_obj :pointer)
  (row :int)
  (col :int))

(cffi:defcfun ("wxGrid_SetGridCursor" wxGrid_SetGridCursor) :void
  (_obj :pointer)
  (row :int)
  (col :int))

(cffi:defcfun ("wxGrid_MoveCursorUp" wxGrid_MoveCursorUp) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_MoveCursorDown" wxGrid_MoveCursorDown) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_MoveCursorLeft" wxGrid_MoveCursorLeft) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_MoveCursorRight" wxGrid_MoveCursorRight) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_MovePageDown" wxGrid_MovePageDown) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_MovePageUp" wxGrid_MovePageUp) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_MoveCursorUpBlock" wxGrid_MoveCursorUpBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_MoveCursorDownBlock" wxGrid_MoveCursorDownBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_MoveCursorLeftBlock" wxGrid_MoveCursorLeftBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_MoveCursorRightBlock" wxGrid_MoveCursorRightBlock) :int
  (_obj :pointer)
  (expandSelection :int))

(cffi:defcfun ("wxGrid_GetDefaultRowLabelSize" wxGrid_GetDefaultRowLabelSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetRowLabelSize" wxGrid_GetRowLabelSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetDefaultColLabelSize" wxGrid_GetDefaultColLabelSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetColLabelSize" wxGrid_GetColLabelSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetLabelBackgroundColour" wxGrid_GetLabelBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_GetLabelTextColour" wxGrid_GetLabelTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_GetLabelFont" wxGrid_GetLabelFont) :void
  (_obj :pointer)
  (font :pointer))

(cffi:defcfun ("wxGrid_GetRowLabelAlignment" wxGrid_GetRowLabelAlignment) :void
  (_obj :pointer)
  (horiz :pointer)
  (vert :pointer))

(cffi:defcfun ("wxGrid_GetColLabelAlignment" wxGrid_GetColLabelAlignment) :void
  (_obj :pointer)
  (horiz :pointer)
  (vert :pointer))

(cffi:defcfun ("wxGrid_GetRowLabelValue" wxGrid_GetRowLabelValue) :wxstring
  (_obj :pointer)
  (row :int))

(cffi:defcfun ("wxGrid_GetColLabelValue" wxGrid_GetColLabelValue) :wxstring
  (_obj :pointer)
  (col :int))

(cffi:defcfun ("wxGrid_GetGridLineColour" wxGrid_GetGridLineColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_GetCellHighlightColour" wxGrid_GetCellHighlightColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_SetRowLabelSize" wxGrid_SetRowLabelSize) :void
  (_obj :pointer)
  (width :int))

(cffi:defcfun ("wxGrid_SetColLabelSize" wxGrid_SetColLabelSize) :void
  (_obj :pointer)
  (height :int))

(cffi:defcfun ("wxGrid_SetLabelBackgroundColour" wxGrid_SetLabelBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_SetLabelTextColour" wxGrid_SetLabelTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_SetLabelFont" wxGrid_SetLabelFont) :void
  (_obj :pointer)
  (font :pointer))

(cffi:defcfun ("wxGrid_SetRowLabelAlignment" wxGrid_SetRowLabelAlignment) :void
  (_obj :pointer)
  (horiz :int)
  (vert :int))

(cffi:defcfun ("wxGrid_SetColLabelAlignment" wxGrid_SetColLabelAlignment) :void
  (_obj :pointer)
  (horiz :int)
  (vert :int))

(cffi:defcfun ("wxGrid_SetRowLabelValue" wxGrid_SetRowLabelValue) :void
  (_obj :pointer)
  (row :int)
  (label :pointer))

(cffi:defcfun ("wxGrid_SetColLabelValue" wxGrid_SetColLabelValue) :void
  (_obj :pointer)
  (col :int)
  (label :pointer))

(cffi:defcfun ("wxGrid_SetGridLineColour" wxGrid_SetGridLineColour) :void
  (_obj :pointer)
  (col :pointer))

(cffi:defcfun ("wxGrid_SetCellHighlightColour" wxGrid_SetCellHighlightColour) :void
  (_obj :pointer)
  (col :pointer))

(cffi:defcfun ("wxGrid_EnableDragRowSize" wxGrid_EnableDragRowSize) :void
  (_obj :pointer)
  (enable :int))

(cffi:defcfun ("wxGrid_DisableDragRowSize" wxGrid_DisableDragRowSize) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_CanDragRowSize" wxGrid_CanDragRowSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_EnableDragColSize" wxGrid_EnableDragColSize) :void
  (_obj :pointer)
  (enable :int))

(cffi:defcfun ("wxGrid_DisableDragColSize" wxGrid_DisableDragColSize) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_CanDragColSize" wxGrid_CanDragColSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_EnableDragGridSize" wxGrid_EnableDragGridSize) :void
  (_obj :pointer)
  (enable :int))

(cffi:defcfun ("wxGrid_DisableDragGridSize" wxGrid_DisableDragGridSize) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_CanDragGridSize" wxGrid_CanDragGridSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_SetRowAttr" wxGrid_SetRowAttr) :void
  (_obj :pointer)
  (row :int)
  (attr :pointer))

(cffi:defcfun ("wxGrid_SetColAttr" wxGrid_SetColAttr) :void
  (_obj :pointer)
  (col :int)
  (attr :pointer))

(cffi:defcfun ("wxGrid_SetColFormatBool" wxGrid_SetColFormatBool) :void
  (_obj :pointer)
  (col :int))

(cffi:defcfun ("wxGrid_SetColFormatNumber" wxGrid_SetColFormatNumber) :void
  (_obj :pointer)
  (col :int))

(cffi:defcfun ("wxGrid_SetColFormatFloat" wxGrid_SetColFormatFloat) :void
  (_obj :pointer)
  (col :int)
  (width :int)
  (precision :int))

(cffi:defcfun ("wxGrid_SetColFormatCustom" wxGrid_SetColFormatCustom) :void
  (_obj :pointer)
  (col :int)
  (typeName :pointer))

(cffi:defcfun ("wxGrid_EnableGridLines" wxGrid_EnableGridLines) :void
  (_obj :pointer)
  (enable :int))

(cffi:defcfun ("wxGrid_GridLinesEnabled" wxGrid_GridLinesEnabled) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetDefaultRowSize" wxGrid_GetDefaultRowSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetRowSize" wxGrid_GetRowSize) :int
  (_obj :pointer)
  (row :int))

(cffi:defcfun ("wxGrid_GetDefaultColSize" wxGrid_GetDefaultColSize) :int
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetColSize" wxGrid_GetColSize) :int
  (_obj :pointer)
  (col :int))

(cffi:defcfun ("wxGrid_GetDefaultCellBackgroundColour" wxGrid_GetDefaultCellBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_GetCellBackgroundColour" wxGrid_GetCellBackgroundColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(cffi:defcfun ("wxGrid_GetDefaultCellTextColour" wxGrid_GetDefaultCellTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_GetCellTextColour" wxGrid_GetCellTextColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(cffi:defcfun ("wxGrid_GetDefaultCellFont" wxGrid_GetDefaultCellFont) :void
  (_obj :pointer)
  (font :pointer))

(cffi:defcfun ("wxGrid_GetCellFont" wxGrid_GetCellFont) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (font :pointer))

(cffi:defcfun ("wxGrid_GetDefaultCellAlignment" wxGrid_GetDefaultCellAlignment) :void
  (_obj :pointer)
  (horiz :pointer)
  (vert :pointer))

(cffi:defcfun ("wxGrid_GetCellAlignment" wxGrid_GetCellAlignment) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (horiz :pointer)
  (vert :pointer))

(cffi:defcfun ("wxGrid_SetDefaultRowSize" wxGrid_SetDefaultRowSize) :void
  (_obj :pointer)
  (height :int)
  (resizeExistingRows :int))

(cffi:defcfun ("wxGrid_SetRowSize" wxGrid_SetRowSize) :void
  (_obj :pointer)
  (row :int)
  (height :int))

(cffi:defcfun ("wxGrid_SetDefaultColSize" wxGrid_SetDefaultColSize) :void
  (_obj :pointer)
  (width :int)
  (resizeExistingCols :int))

(cffi:defcfun ("wxGrid_SetColSize" wxGrid_SetColSize) :void
  (_obj :pointer)
  (col :int)
  (width :int))

(cffi:defcfun ("wxGrid_AutoSizeColumn" wxGrid_AutoSizeColumn) :void
  (_obj :pointer)
  (col :int)
  (setAsMin :int))

(cffi:defcfun ("wxGrid_AutoSizeRow" wxGrid_AutoSizeRow) :void
  (_obj :pointer)
  (row :int)
  (setAsMin :int))

(cffi:defcfun ("wxGrid_AutoSizeColumns" wxGrid_AutoSizeColumns) :void
  (_obj :pointer)
  (setAsMin :int))

(cffi:defcfun ("wxGrid_AutoSizeRows" wxGrid_AutoSizeRows) :void
  (_obj :pointer)
  (setAsMin :int))

(cffi:defcfun ("wxGrid_AutoSize" wxGrid_AutoSize) :void
  (_obj :pointer))

(cffi:defcfun ("wxGrid_SetColMinimalWidth" wxGrid_SetColMinimalWidth) :void
  (_obj :pointer)
  (col :int)
  (width :int))

(cffi:defcfun ("wxGrid_SetRowMinimalHeight" wxGrid_SetRowMinimalHeight) :void
  (_obj :pointer)
  (row :int)
  (width :int))

(cffi:defcfun ("wxGrid_SetDefaultCellBackgroundColour" wxGrid_SetDefaultCellBackgroundColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_SetCellBackgroundColour" wxGrid_SetCellBackgroundColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(cffi:defcfun ("wxGrid_SetDefaultCellTextColour" wxGrid_SetDefaultCellTextColour) :void
  (_obj :pointer)
  (colour :pointer))

(cffi:defcfun ("wxGrid_SetCellTextColour" wxGrid_SetCellTextColour) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (colour :pointer))

(cffi:defcfun ("wxGrid_SetDefaultCellFont" wxGrid_SetDefaultCellFont) :void
  (_obj :pointer)
  (font :pointer))

(cffi:defcfun ("wxGrid_SetCellFont" wxGrid_SetCellFont) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (font :pointer))

(cffi:defcfun ("wxGrid_SetDefaultCellAlignment" wxGrid_SetDefaultCellAlignment) :void
  (_obj :pointer)
  (horiz :int)
  (vert :int))

(cffi:defcfun ("wxGrid_SetCellAlignment" wxGrid_SetCellAlignment) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (horiz :int)
  (vert :int))

(cffi:defcfun ("wxGrid_SetDefaultRenderer" wxGrid_SetDefaultRenderer) :void
  (_obj :pointer)
  (renderer :pointer))

(cffi:defcfun ("wxGrid_SetCellRenderer" wxGrid_SetCellRenderer) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (renderer :pointer))

(cffi:defcfun ("wxGrid_GetDefaultRenderer" wxGrid_GetDefaultRenderer) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetCellRenderer" wxGrid_GetCellRenderer) :pointer
  (_obj :pointer)
  (row :int)
  (col :int))

(cffi:defcfun ("wxGrid_SetDefaultEditor" wxGrid_SetDefaultEditor) :void
  (_obj :pointer)
  (editor :pointer))

(cffi:defcfun ("wxGrid_SetCellEditor" wxGrid_SetCellEditor) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (editor :pointer))

(cffi:defcfun ("wxGrid_GetDefaultEditor" wxGrid_GetDefaultEditor) :pointer
  (_obj :pointer))

(cffi:defcfun ("wxGrid_GetCellEditor" wxGrid_GetCellEditor) :pointer
  (_obj :pointer)
  (row :int)
  (col :int))

(cffi:defcfun ("wxGrid_GetCellValue" wxGrid_GetCellValue) :wxstring
  (_obj :pointer)
  (row :int)
  (col :int))

(cffi:defcfun ("wxGrid_SetCellValue" wxGrid_SetCellValue) :void
  (_obj :pointer)
  (row :int)
  (col :int)
  (s :pointer))
